stylesheets/styles.css
/* ... */
.skill-l, .skill-m, .skill-s {
    text-align: center;
    color: #E3EDE9;
    border: 5px solid white;
    border-top: none;
    border-left: none;
}

.skill-l {
    height: 100px;
    padding-top: 38px;
    font-size: 18px;
    background-color: #3C4148;
}

.skill-m {
    height: 60px;
    padding-top: 18px;
    font-size: 15px;
    background-color: #4D5258;
}

.skill-s {
    height: 35px;
    padding-top: 5px;
    font-size: 14px;
    background-color: #5F6369;
}


/*
#skills ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#skills ul li {
    display:inline-flex;
    width: 100px;
    height: 100px;
    background-color: #3C4148;
    color: #E3EDE9;
    margin-top: 0px;
    font-size: 15px;
    margin-bottom: 4px;
}

#skills ul li div {
    margin: auto;
    overflow: hidden;
    text-align: center;
}
*/

#portfolio, #contact-me, .about-me {
    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
    position: relative;
    z-index: 2;
}

#portfolio figure {
    transition: all 0.2s ease 0s;
}

#portfolio figure figcaption {
    background-color: #3C4148;
    overflow: hidden;
    position: relative;
    top: -20px;
    height: 20px;
    padding: 1em 1.1em 0;
    opacity:0.0;
    transition: all 0.2s ease 0s;
}

#portfolio figure figcaption h5, #portfolio figure figcaption p {
    margin: 0;
    color: white;
}

#portfolio figure figcaption h5 {
    font-weight: 600;
    margin-bottom: 0.4em;
}

#portfolio a {
    text-decoration: none;
}

#portfolio figure:hover > figcaption {
    background-position: bottom left;
    top: -130px;
    height: 130px;
    opacity: .9;
}

#portfolio figure:hover {
    margin-bottom: -110px;
}

.github-logo {
    float: right;
    margin-top: 77px;
    margin-right: 5px;
    width: 50px;
    height: 50px;
    display:block;
    background-image: url(../media/github.png);
}

.github-logo:hover {
    background-image: url(../media/github-over.png);
}

@media (max-width: 1201px) {
    
    #portfolio figure figcaption {
        padding-left: 0.8em;       
    }
    
    #portfolio figure:hover > figcaption {
        padding-top: 0.7em;
        height: 141px;
        top: -141px;
    }   
    
    #portfolio figure:hover {
        margin-bottom: -121px;
    }
    
    .github-logo {
        margin-top: 51px;
    }
}

@media (max-width: 991px) {
    #portfolio figure:hover > figcaption {
        top: -220px;
        height: 220px;
    }
    
    #portfolio figure:hover {
        margin-bottom: -200px;
    }
    
    figure h5 {
        line-height: 1.5em;
    }
}

@media (max-width: 767px) {
    #portfolio figure:hover {
        margin-bottom: 20px;
    }
    
    #portfolio figure figcaption {
        top:0px;
        height: auto;
        max-height: 0px;
        padding-bottom: 1em;
    }
    
    #portfolio figure:hover >figcaption {
        top: 0px;
        height: auto;
        max-height: 250px;
    }
    
    #portfolio figure figcaption .btn {
        margin: 1em 0 0;
    }
}

#others .btn {
    float: right;
}

#others .btn-left {
    float: left;
}

#others hr {
    margin-bottom: 2em;
    border-top-color: rgba(41,47,54,.1);
}

@media (max-width: 767px) {
    #others .btn {
        display: block;
        width: 100%;
        margin-top: 2em;
    }
    
    img {
        width: auto;
        max-width: 100%;
        height: auto;
        margin: 0 auto;
    }
}

#contact-me ul{
    list-style: none;
    padding: 0;
    text-align: center;
}

#contact-me ul li {
    display:inline-block;
}

#contact-me ul li a {
    text-decoration: none;
    display: inline-block;
    width: 60px;
    height: 60px;
    margin: 5px;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 60px auto;
    transition: all 0.2s ease 0s;
}

#twitter {
    background-image: url(../media/twitter-logo.png);
}

#linkedin {
    background-image: url(../media/linkedin-logo.png);
}

#github {
    background-image: url(../media/github-logo.png);
}

#mail {
    background-image: url(../media/mail-icon.png);
}

#contact-me {
    padding-bottom: 0;
}

#contact-me ul li a:after {
    border: 12px solid transparent;
    content: "";
    width: 0;
    height: 0;
    position: relative;
    left: 6px;
    top: 23px;
    display: block;
    opacity: 0.0;
    transition: all 0.2s ease 0s ;
}

#contact-me ul li a:hover:after {
    opacity: 1.0;
    top: 43px;
    border-bottom: 12px solid #292F36;

}

#contact-me ul li a p{
    color: white;
    padding: 5px;
    position: relative;
    display: inline;
    top: 70px;
    opacity: 0.0;
    transition: all 0.2s ease 0s;
}

#contact-me ul li a:hover > p{
    opacity: 1.0;
    top: 90px;
    background-color: #292F36;
}

#contact-me ul li a:hover {
    width: 70px;
    height: 70px;
    background-size: 70px auto;
}

@media (max-width: 480px) {
    #contact-me ul li a {
        width: 40px;
        height: 40px;
        background-size: 40px auto;
    }
    
    #contact-me ul li a:hover {
        width: 50px;
        height: 50px;
        background-size: 50px auto;
    }
    
    #contact-me ul li a:after {
        top: 12px;
    }
    
    #contact-me ul li a:hover:after {
        top: 22px;
    }
    
    #contact-me ul li a p {
        top: 46px;
    }
    
    #contact-me ul li a:hover > p{
        top: 66px;
    }
}

#copyright {
    font-style: italic;
    text-align: center;
    margin-top: 3em;
    background-color: #3C4148;
    color: #F1F6F4;
    margin-bottom: 0;
    padding: 0.5em 0;
}

